--- a/default_template/index.html
+++ b/default_template/index.html
@@ -6,5 +6,9 @@
     <title>Default</title>
   </head>
   <body>
+    <div class="frame">
+      <div class="center">
+      </div>
+    </div>
   </body>
 </html>
