Add last details for animation and profile picture

--- a/day_6/index.html
+++ b/day_6/index.html
@@ -14,7 +14,7 @@
               <div class="wrap-picture">
                 <div class="circle-1"></div>
                 <div class="circle-2"></div>
-                <img src="mildred.png" size="100" class="profile-picture">
+                <img src="profile.png" size="100" class="profile-picture">
               </div>
               <p class="name">Mildred Silva</p>
               <p class="job-title">Software Developer</p>
