--- a/day_7/index.html
+++ b/day_7/index.html
@@ -8,38 +8,49 @@
   <body>
     <div class="frame">
       <div class="center">
-        <div class="notifications">
-          <div class="menu">
-            <div class="menu-left-icon">
-              <div class="wrap-line-circle">
-                <div class="line line-xs"></div>
-                <div class="circle"></div>
-              </div>
-              <div class="line"></div>
-            </div>
-            <p class="title">Notifications</p>
-            <div class="square-icon"></div>
+        <div class="section">
+          <div class="menu-options">
+            <ul>
+              <li>Dashboard</li>
+              <li>Profile</li>
+              <li>Notifications</li>
+              <li>Messages</li>
+              <li>Settings</li>
+            </ul>
           </div>
-          <div class="resume">
-            <div class="timeline"></div>
-            <div class="notification">
-              <div class="text">
-                <p class="hour">9:24 AM</p>
-                <p class="info">
-                  <span class="name">John Walker</span> posted a photo on</br> your wall.
-                </p>
+          <div class="notifications">
+            <div class="menu">
+              <div class="menu-left-icon">
+                <div class="wrap-line-circle">
+                  <div class="line line-xs"></div>
+                  <div class="circle"></div>
+                </div>
+                <div class="line"></div>
               </div>
-              <div class="text">
-                <p class="hour">8:15 AM</p>
-                <p class="info">
-                  <span class="name">Alice Parkerr</span> posted a photo on</br> your wall.
-                </p>
-              </div>
-              <div class="text">
-                <p class="hour long-text">Yesterday</p>
-                <p class="info">
-                  <span class="name">Luke Wayne</span> posted a photo on</br> your wall.
-                </p>
+              <p class="title">Notifications</p>
+              <div class="square-icon"></div>
+            </div>
+            <div class="resume">
+              <div class="timeline"></div>
+              <div class="notification">
+                <div class="text">
+                  <p class="hour">9:24 AM</p>
+                  <p class="info">
+                    <span class="name">John Walker</span> posted a photo on</br> your wall.
+                  </p>
+                </div>
+                <div class="text">
+                  <p class="hour">8:15 AM</p>
+                  <p class="info">
+                    <span class="name">Alice Parkerr</span> posted a photo on</br> your wall.
+                  </p>
+                </div>
+                <div class="text">
+                  <p class="hour long-text">Yesterday</p>
+                  <p class="info">
+                    <span class="name">Luke Wayne</span> posted a photo on</br> your wall.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
