Added search input and animations

--- a/day_7/index.html
+++ b/day_7/index.html
@@ -27,6 +27,7 @@
                 </div>
                 <div class="line"></div>
               </div>
+              <input type="text" id="fname" name="fname" class="search-box" placeholder="Search...">
               <p class="title">Notifications</p>
               <div class="square-icon"></div>
             </div>
