main circle animation

--- a/day_8/index.html
+++ b/day_8/index.html
@@ -8,7 +8,11 @@
   <body>
     <div class="frame">
       <div class="center">
-        <div class="circle"></div>
+        <div class="circle">
+          <div class="ink one"></div>
+          <div class="ink two"></div>
+          <div class="ink three"></div>
+        </div>
       </div>
     </div>
   </body>
