add mini circles

--- a/day_8/index.html
+++ b/day_8/index.html
@@ -12,6 +12,10 @@
           <div class="ink one"></div>
           <div class="ink two"></div>
           <div class="ink three"></div>
+          <div class="ink four"></div>
+          <div class="ink five"></div>
+          <div class="ink six"></div>
+          <div class="ink seven"></div>
         </div>
       </div>
     </div>
