Add bubbles around the big circle

--- a/day_8/index.html
+++ b/day_8/index.html
@@ -12,10 +12,15 @@
           <div class="ink one"></div>
           <div class="ink two"></div>
           <div class="ink three"></div>
-          <div class="ink four"></div>
-          <div class="ink five"></div>
-          <div class="ink six"></div>
-          <div class="ink seven"></div>
+          <div class="bubbles"></div>
+          <div class="bubbles b-two"></div>
+          <div class="bubbles b-three"></div>
+          <div class="bubbles b-four"></div>
+          <div class="bubbles b-five"></div>
+          <div class="bubbles b-six"></div>
+          <div class="bubbles b-seven"></div>
+          <div class="bubbles b-eight"></div>
+          <div class="bubbles b-nine"></div>
         </div>
       </div>
     </div>
