create rain and drops

--- a/day_9/index.html
+++ b/day_9/index.html
@@ -30,7 +30,68 @@
           <div class="blur four"></div>
           <div class="blur five"></div>
           <div class="blur six"></div>
-
+        </div>
+        <div class="rain">
+          <div class="drops">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-two">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-three">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-four">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-five">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-six">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-seven">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-eight">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-nine">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-ten">
+            <div class="triangle"></div>
+            <div class="circle"></div>
+          </div>
+          <div class="drops d-mini">
+            <div class="triangle t-mini"></div>
+            <div class="circle c-mini"></div>
+          </div>
+          <div class="drops d-mini d-mini-two">
+            <div class="triangle t-mini"></div>
+            <div class="circle c-mini"></div>
+          </div>
+          <div class="drops d-mini d-mini-three">
+            <div class="triangle t-mini"></div>
+            <div class="circle c-mini"></div>
+          </div>
+          <div class="drops d-mini d-mini-four">
+            <div class="triangle t-mini"></div>
+            <div class="circle c-mini"></div>
+          </div>
+          <div class="drops d-mini d-mini-five">
+            <div class="triangle t-mini"></div>
+            <div class="circle c-mini"></div>
+          </div>
         </div>
       </div>
     </div>
