--- a/day_10/index.html
+++ b/day_10/index.html
@@ -9,7 +9,18 @@
     <div class="frame">
       <div class="center">
         <div class="main-circle">
-          <div class="doted-circle"></div>
+          <div class="doted-circle">
+            <div class="info">
+              <p>MON 07 MAR 2022</p>
+              <p class="time">12:59</p>
+              <p>
+                81
+                <span>
+                  1248 KCAL
+                </span>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
