--- a/day_10/index.html
+++ b/day_10/index.html
@@ -9,15 +9,20 @@
     <div class="frame">
       <div class="center">
         <div class="main-circle">
+          <div class="spinner">
+            <svg class="svg">
+              <circle id="circle" cx="111" cy="110" r="105"/>
+            </svg>
+          </div>
           <div class="doted-circle">
             <div class="info">
               <p>MON 07 MAR 2022</p>
               <p class="time">12:59</p>
-              <p>
+              <p class="heartbeat">
                 81
-                <span>
-                  1248 KCAL
-                </span>
+                <span class="calories">
+                1248 KCAL
+              </span>
               </p>
             </div>
           </div>
